add database storage sqlite

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ quarkus.langchain4j.openai.api-key=YOUR_KEY
 
 quarkus.langchain4j.openai.chat-model.log-requests=true
 quarkus.langchain4j.openai.chat-model.log-responses=true
+
+
+
+quarkus.datasource.db-kind=other
+quarkus.datasource.jdbc.driver=org.sqlite.JDBC
+quarkus.datasource.jdbc.url=jdbc:sqlite:src/main/resources/stored_feedback.db
