--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.45.2.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
