return true dashboard values by querying DB and provide methods to whipe and populate db via application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ quarkus.langchain4j.openai.chat-model.log-responses=true
 quarkus.datasource.db-kind=other
 quarkus.datasource.jdbc.driver=org.sqlite.JDBC
 quarkus.datasource.jdbc.url=jdbc:sqlite:src/main/resources/stored_feedback.db
+
+# Database reset configuration
+app.database.reset=false
+# Database populate with demo data configuration
+app.database.prepopulate=false
