--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,10 @@ quarkus.langchain4j.openai.chat-model.log-requests=true
 quarkus.langchain4j.openai.chat-model.log-responses=true
 
 
-
-quarkus.datasource.db-kind=other
-quarkus.datasource.jdbc.driver=org.sqlite.JDBC
-quarkus.datasource.jdbc.url=jdbc:sqlite:src/main/resources/stored_feedback.db
+app.database.jdbc.driver=org.sqlite.JDBC
+app.database.jdbc.url=jdbc:sqlite:src/main/resources/stored_feedback.db
 
 # Database reset configuration
-app.database.reset=false
+app.database.reset=true
 # Database populate with demo data configuration
-app.database.prepopulate=false
+app.database.prepopulate=true
