stub for embeddingstore and contentretriever to augment chat with database info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ app.database.jdbc.url=jdbc:sqlite:src/main/resources/stored_feedback.db
 app.database.reset=true
 # Database populate with demo data configuration
 app.database.prepopulate=true
+
+
+quarkus.langchain4j.embedding-model.provider=dev.langchain4j.model.embedding.AllMiniLmL6V2EmbeddingModel
