--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,11 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.45.2.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
+      <version>0.29.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
