add feedback to the embedding store and apply metadata filtering for chatbot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ app.database.jdbc.driver=org.sqlite.JDBC
 app.database.jdbc.url=jdbc:sqlite:src/main/resources/stored_feedback.db
 
 # Database reset configuration
-app.database.reset=true
+app.database.reset=false
 # Database populate with demo data configuration
-app.database.prepopulate=true
+app.database.prepopulate=false
 
 
 quarkus.langchain4j.embedding-model.provider=dev.langchain4j.model.embedding.AllMiniLmL6V2EmbeddingModel
