--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
       <version>0.29.1</version>
     </dependency>
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-embedding-store-filter-parser-sql</artifactId>
+      <version>0.29.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
